<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Add member search -->
  <string name="search_label">Search</string>
  <string name="search_hint_label">Add people to the group</string>
  <string name="search_setting_description">Your contacts</string>

  <!-- New Member -->
  <string name="newManualEntryLabel">Add name only</string>
  <string name="newContactLabel">Add a phone contact</string>
  <string name="noMembersHelp">"Add in the group members and restrictions if
    required"
  </string>

  <!-- Preferred Contact Details Selection Popup -->
  <string name="contactDetailsPopupTitle">Select contact mode for</string>

  <!-- Restrictions Popup -->
  <string name="restrictionPopupTitle">Restrictions for</string>

   <!-- Member row restrictions label -->
  <string name="restrictions_label">restriction</string>

  <!-- Notify Dialog -->
  <string name="draw_failed_message">"Couldn't complete the draw"</string>
  <string name="draw_success_message">Draw was successful!</string>
  <string name="no_engine_error_message">Error: Could not find Draw Engine</string>
  <string name="notify_message_text_hint">Enter any message you\'d like to send along with the Secret Santa assignments (optional)</string>
  <string name="message_count_label">chars left: </string>
  <string name="sms_and_data_charges_message">Normal SMS and data charges apply</string>
  <string name="notify_send_button_text">Send</string>
  <string name="no_email_warning">WARNING: Emails won\'t be sent. We can\'t find your Gmail account</string>


  <!-- Edit screen -->
  <string name="hint_member_name">Name</string>
  <string name="hint_member_contact_details">Contact Details</string>
  <string name="contact_method_label">How to notify of assignment?</string>
  <string name="contact_details_label">Contact Details</string>
  <string name="member_name_label">Member Name</string>

  <!-- Clear assignments confirmation dialog button -->
  <string name="clear_assignments_button">Clear all</string>
  <string name="clear_assignments_dialog_title">Clear assignments</string>
  <string name="clear_assignments_dialog_msg">You\'ll lose all the Secret Santa assignments for this group. Are you sure?"</string>

  <!-- Preferences - Algorithm -->
  <string name="algorithm_preferences">Algorithm Preferences</string>
  <string name="algorithm_list_preference">Draw Engine</string>
  <string name="summary_list_preference">The algorithm that is used to calculate
    your draws
  </string>
  <string name="dialog_title_list_preference">Draw Engine</string>
  <string name="defaultDrawEngine">com.moac.drawengine.BasicDrawEngine</string>

  <!-- Preferences - Email -->
  <string name="email_preferences">Email Preferences</string>
  <string name="gmail_account_list_preference">Gmail Account</string>
  <string name="gmail_summary_list_preference">The Gmail account used to send
    draw notification emails
  </string>
  <string name="gmail_dialog_title_list_preference">Gmail Account</string>
  <string name="gmail_account_preference">gmail_account_preference</string>

  <!-- Preferences SMS -->
  <string name="sms_preferences">SMS Preferences</string>
  <string name="use_multipart_sms">Use Multipart SMS</string>
  <string name="use_multipart_sms_desc">Send long messages as multipart SMS
    rather than individual messages (most carriers support this)
  </string>
  <bool name="defaultUseMultipartSms">true</bool>

  <!-- App Info -->
  <string name="about_title">About Open Secret Santa</string>
  <string name="app_name">Open Secret Santa</string>
  <string name="credits">By Peter and Melissa from Many Object and Code</string>
  <string name="fb_contact">www.facebook.com/manyobjectandcode</string>
  <string name="twitter">twitter.com/manyobjectncode</string>
  <string name="app_version_info">Version: 1.4.1</string>
  <string name="app_date_info">Date: 6th June 2013</string>
  <string name="title_activity_initialise">InitialiseActivity</string>
  <string name="empty_member_list_label">No members in draw</string>
  <string name="prev_draw_label">Prev</string>
  <string name="next_draw_label">Next</string>

  <!-- Accessibility hints -->
  <string name="drawer_open_accesshint">open drawer</string>
  <string name="drawer_close_accesshint">close drawer</string>
  <string name="member_avatar_accesshint">member avatar</string>
  <string name="assignment_avatar_accesshint">Assignment Avatar</string>

  <!-- Menu labels -->
  <string name="menu_done">Done</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_restrictions">Restrictions</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_notify">Notify</string>
  <string name="menu_draw">Draw</string>
  <string name="menu_reveal">Reveal</string>
  <string name="menu_rename">Rename group</string>
  <string name="menu_clear">Clear assignments</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_delete_group">Delete Group</string>

  <!-- Toast messages -->
  <string name="duplicate_name_msg">%s is already in the draw</string>
  <string name="member_add_msg">%s added</string>
  <string name="failed_add_member_msg">Failed to add %s</string>
  <string name="draw_failed_msg">"Couldn't complete the draw"</string>
  <string name="draw_success_msg">Draw was successful!</string>
  <string name="no_engine_error_msg">Error: Could not find Draw Engine</string>

  <!-- Assignment Messages -->
  <string name="standard_assignment_msg" formatted="false">Hi %s, you\'re giving a gift to %s. Sent via the Open Secret Santa app.</string>
  <string name="email_footer_msg"><![CDATA[<hr><p>Organizing your own Secret Santa? Get our free Android app on <a href="https://play.google.com/store/apps/details?id=com.moac.android.opensecretsanta">Google Play</a>.</p>]]></string>
  <string name="email_subject_msg">Your Secret Santa assignment from Open Secret Santa</string>
  <string name="reveal_dialog_title">Reveal Secret Santa</string>

    <!-- Progress Dialog Messages -->
  <string name="draw_in_progress_msg">Drawing assigments</string>
  <string name="notify_in_progress_msg">Sending assigments</string>
  <string name="notify_dialog_title">Notify Group</string>


  <!-- Drawer List -->
  <string name="drawer_groups_header">My Groups</string>
  <string name="drawer_groups_new">New Group</string>
  <string name="drawer_options_header">Options</string>

  <!-- Clear Assignments Dialog -->
  <string name="clear_assignment_dialog_title">Clear assignments?</string>
  <string name="clear_assignments_dialog_msg">You\'ll lose all the secret santa assignments for this group</string>
  <string name="first_group_name">My Group</string>

  <string name="menu_add_ime_label">Add</string>

</resources>